apps/grafana/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-grafana
  namespace: monitoring
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "grafana.127.0.0.1.nip.io"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs-grafana
  namespace: monitoring
spec:
  hosts:
  - "grafana.127.0.0.1.nip.io"
  gateways:
  - istio-gateway-grafana
  http:
  - name: 'grafana-route'
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: grafana
